[tool.poetry]
name = "huntil-backend"
version = "0.1.0"
description = ""
authors = ["Colin MacRae <76566137+comacrae@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "huntil_backend" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = ">=0.34.0,<0.35.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = ">=2.0.37,<3.0.0"
pydantic = ">=2.10.5,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
